--- a/module2solution/style.css
+++ b/module2solution/style.css
@@ -1,6 +1,5 @@
 * {
 	box-sizing: border-box;
-	background-color: lightblue;
 }
 
 .container { 
@@ -19,13 +18,27 @@
 	background-color: skyblue;
 }
 
+#pink{
+	background-color: pink;
+}
+
+#red{
+	background-color: darkred;
+	color: white;
+}
+
+#gold{
+	background-color: gold;
+}
+
+h1{
+	text-align: center;
+}
 header {
 	font-size: 24px;
-	color: blue;
 }
 
 p {
-	color: red;
 	background-color: lightgray;
 	margin-top: 36px;
 }
