--- a/module3solution/css/styles.css
+++ b/module3solution/css/styles.css
@@ -1,1 +1,60 @@
+body {
+  font-size: 16px;
+
+  font-family: 'Oxygen', sans-serif;
+}
+
+/** HEADER **/
+#header-nav {
+  border-radius: 0;
+  border: 0;
+}
+
+
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+
+#nav-list {
+  margin-top: 10px;
+}
+#nav-list a {
+  text-align: center;
+}
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+#food-llc{
+  position: absolute;
+  color: black;
+  font-size: 24px;
+  margin: 10px;
+
+}
+
+.chicken-tile {
+  background-color: lightgrey;
+  border: 1px solid black;
+  margin: 20px;
+  padding: 10px;
+}
+
+#chicken{
+  font-weight: bold;
+  font-size: 24px;
+}
+
+#our-menu{
+  font-weight: bold;
+  font-size: 30px;
+}
+
+
+
+
 
